worked on this at home

--- a/html.html
+++ b/html.html
@@ -8,8 +8,8 @@
 <body>
 
 <h1>Find your Horoscope!</h1>
-<p>This is a paragraph.</p>
-<div id=”myDiv”>What month were you born in?</div>
+
+<div id=”myDiv”>What is your Birthday?</div>
 
 <select id="monthBox" onchange="monthChange()">
     <option value="0">--</option>
@@ -31,7 +31,7 @@
 
 </select>
 
-<button onclick="getHoroscope()">Get Horoscope!</button>
+<button onclick="onSubmit()">Get Horoscope!</button>
 <div id="output"></div>
 
 </body>
