worked on this at home

--- a/html.html
+++ b/html.html
@@ -9,7 +9,10 @@
 
 <h1>Find your Horoscope!</h1>
 
+<input type="text" id="myField" value="" size="25">
+
 <div id=”myDiv”>What is your Birthday?</div>
+
 
 <select id="monthBox" onchange="monthChange()">
     <option value="0">--</option>
