worked on this at home

--- a/html.html
+++ b/html.html
@@ -9,9 +9,11 @@
 
 <h1>Find your Horoscope!</h1>
 
-<input type="text" id="myField" value="" size="25">
+<div id=”myDiv1”>What is your name?</div>
 
-<div id=”myDiv”>What is your Birthday?</div>
+<input type="text" id="name" value="" size="25">
+
+<div id=”myDiv2”>What is your birthday?</div>
 
 
 <select id="monthBox" onchange="monthChange()">
